// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`decode Edit > decodes parsed EDIT protobuf correctly 1`] = `
{
  "authors": [],
  "name": "Edit",
  "ops": [],
  "proposalId": "-1",
  "type": "EDIT",
  "version": "0.0.1",
}
`;

exports[`decode IpfsContent > decodes parsed IpfsMetadata protobuf correctly 1`] = `
{
  "name": "Edit",
  "proposalId": "-1",
  "type": "EDIT",
  "version": "0.0.1",
}
`;

exports[`decode Membership > decodes parsed ADD_EDITOR protobuf correctly 1`] = `
{
  "name": "Add editor",
  "proposalId": "-1",
  "type": "ADD_EDITOR",
  "userAddress": "0x1234",
  "version": "0.0.1",
}
`;

exports[`decode Membership > decodes parsed ADD_MEMBER protobuf correctly 1`] = `
{
  "name": "Add member",
  "proposalId": "-1",
  "type": "ADD_MEMBER",
  "userAddress": "0x1234",
  "version": "0.0.1",
}
`;

exports[`decode Membership > decodes parsed REMOVE_EDITOR protobuf correctly 1`] = `
{
  "name": "Remove editor",
  "proposalId": "-1",
  "type": "REMOVE_EDITOR",
  "userAddress": "0x1234",
  "version": "0.0.1",
}
`;

exports[`decode Membership > decodes parsed REMOVE_MEMBER protobuf correctly 1`] = `
{
  "name": "Remove member",
  "proposalId": "-1",
  "type": "REMOVE_MEMBER",
  "userAddress": "0x1234",
  "version": "0.0.1",
}
`;

exports[`decode Subspace > decodes parsed ADD_SUBSPACE protobuf correctly 1`] = `
{
  "name": "Add subspace",
  "proposalId": "-1",
  "subspace": "0x1234",
  "type": "ADD_SUBSPACE",
  "version": "0.0.1",
}
`;

exports[`decode Subspace > decodes parsed ADD_SUBSPACE protobuf correctly 2`] = `
{
  "name": "Add subspace",
  "proposalId": "-1",
  "subspace": "0x1234",
  "type": "ADD_SUBSPACE",
  "version": "0.0.1",
}
`;

exports[`decode Subspace > decodes parsed REMOVE_SUBSPACE protobuf correctly 1`] = `
{
  "name": "Remove subspace",
  "proposalId": "-1",
  "subspace": "0x1234",
  "type": "REMOVE_SUBSPACE",
  "version": "0.0.1",
}
`;
